# kale

./: .gitignore  LICENSE  README.md  basic_scalar_plot.ipynb  clean_msh.ipynb  coastlines_grid_kale_single_step_erosion_figures_nankai.ipynb  coastlines_grid_poster_three_panel.ipynb  environment.yml  grid.ipynb  kale.ipynb  kale_log_example.ipynb  kale_nankai.ipynb  kale_nankai_movie_only.ipynb  kale_single_step_erosion_figures_nankai.ipynb  manipulate-algorithm.ipynb  poster_three_panel.ipynb  pyproject.toml  scalar_bar.ipynb  subdivide.ipynb  subdivide.py  view_angle.ipynb
demo/: warping-animations.ipynb
examples/: grid.ipynb  manipulate-algorithm.ipynb  scalar_bar.ipynb  subdivide.ipynb  subdivide.pvsm  view_angle.ipynb
kale/: __init__.py  algorithms.py  engine.py  helpers.py  theme.py  widgets.py
kale/assets/: __init__.py
previous/: kale.ipynb  kale_log_example.ipynb  kale_nankai.ipynb  kale_nankai_movie_only.ipynb  kale_single_step_erosion_figures_nankai.ipynb
simple/: animations.ipynb  basic_scalar_plot.ipynb  geospatial.ipynb  single_time.ipynb  three_times_panel.ipynb
